@@ -7,6 +7,10 @@ Release CMTK-1.1.3:
 
 - Removed: obsolete "deformation_field" tool.
 
+- Fixed: average_images tool was broken.
+
+- Testing: added tests and baselines for average_images tool.
+
 
 Release CMTK-1.1.2 (2009-10-28):
 
